--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,4 +1,5 @@
 last 2 Chrome versions
 last 2 Firefox versions
 last 2 Edge versions
-Safari >= 16
+last 4 safari major versions
+last 4 ios_saf major versions
