--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ PUBLIC_SITE_URL=https://unlibra.com
 
 # Site title (displayed in browser tab and header)
 PUBLIC_SITE_TITLE=unlibra.com
+
+# Disable robots crawling (set to "true" to disallow all robots)
+# Default: false (robots are allowed)
+DISABLE_ROBOTS=false
