Add environment variables for profile name and username
- Add PUBLIC_PROFILE_NAME for configurable profile display name
- Add PUBLIC_PROFILE_USERNAME for configurable @username
- Update .env.example with new environment variables
- Enable easy customization for mirror sites

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ PUBLIC_SITE_URL=https://unlibra.com
 # Site title (displayed in browser tab and header)
 PUBLIC_SITE_TITLE=unlibra.com
 
+# Profile name (displayed on the site)
+PUBLIC_PROFILE_NAME=unlibra
+
+# Profile username (displayed as @username)
+PUBLIC_PROFILE_USERNAME=unlibra
+
 # Disable robots crawling (set to "true" to disallow all robots)
 # Default: false (robots are allowed)
 DISABLE_ROBOTS=false
