Add Vercel Analytics integration

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/ibm-plex-sans-jp": "^5.2.8",
     "@i18n-tiny/astro": "^1.1.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@vercel/analytics": "^1.6.1",
     "astro": "^5.16.4",
     "tailwindcss": "^4.1.17"
   },
